Wildnis Schlucht -> Fardrim Eisspeerpassage -> Fardrim Bruecke

--- a/mod/area/dr_icespear01.git.yml
+++ b/mod/area/dr_icespear01.git.yml
@@ -6,9 +6,9 @@ AreaProperties:
   value: !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 100
     AmbientSndDay: {type: :int, value: 0}
-    AmbientSndDayVol: {type: :int, value: 36}
+    AmbientSndDayVol: {type: :int, value: 127}
     AmbientSndNight: {type: :int, value: 0}
-    AmbientSndNitVol: {type: :int, value: 15}
+    AmbientSndNitVol: {type: :int, value: 16}
     EnvAudio: {type: :int, value: 0}
     MusicBattle: {type: :int, value: 0}
     MusicDay: {type: :int, value: 0}
@@ -93,8 +93,8 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 54.57}
-    Y: {type: :float, value: 50.41}
+    X: {type: :float, value: 52.39}
+    Y: {type: :float, value: 52.48}
     Z: {type: :float, value: -8.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -156,8 +156,8 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 94.5}
-    Y: {type: :float, value: 51.33}
+    X: {type: :float, value: 12.43}
+    Y: {type: :float, value: 50.44}
     Z: {type: :float, value: -8.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
@@ -219,8 +219,8 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 14.6}
-    Y: {type: :float, value: 51.91}
+    X: {type: :float, value: 90.04}
+    Y: {type: :float, value: 51.09}
     Z: {type: :float, value: -8.0}
 SoundList: 
   type: :list
@@ -249,34 +249,29 @@ TriggerList:
         PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.0113}
-        PointY: {type: :float, value: -0.8242}
+        PointX: {type: :float, value: 2.464}
+        PointY: {type: :float, value: 0.1366}
         PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 13.4697}
-        PointY: {type: :float, value: -0.9363}
+        PointX: {type: :float, value: 2.29}
+        PointY: {type: :float, value: 6.0816}
         PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 13.4809}
-        PointY: {type: :float, value: -0.1125}
-        PointZ: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 0.0016}
-        PointY: {type: :float, value: -0.1125}
+        PointX: {type: :float, value: 0.1965}
+        PointY: {type: :float, value: 6.228}
         PointZ: {type: :float, value: 0.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: wp_drsued02_drsued03}
-    LinkedToFlags: {type: :byte, value: 2}
+    LinkedTo: {type: :cexostr, value: wildnis_schlucht_2_dr_icespear01}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
       type: :cexolocstr
       str_ref: 14760
-      value: 
-        0: drsued03_drsued02
+      value: {}
+
     OnClick: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
@@ -285,7 +280,7 @@ TriggerList:
     ScriptOnEnter: {type: :resref, value: ""}
     ScriptOnExit: {type: :resref, value: ""}
     ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: drsued03_drsued02}
+    Tag: {type: :cexostr, value: dr_icespear01_2_wildnis_schlucht}
     TemplateResRef: {type: :resref, value: newtransition}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -295,9 +290,9 @@ TriggerList:
     TrapType: {type: :byte, value: 0}
     Type: {type: :int, value: 1}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 43.2401}
+    XPosition: {type: :float, value: 0.2436}
     YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 99.7944}
+    YPosition: {type: :float, value: 68.5132}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -311,66 +306,14 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: 0.0}
+        PointX: {type: :float, value: -2.0749}
+        PointY: {type: :float, value: -8.3659}
         PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.0175}
-        PointY: {type: :float, value: -0.83}
+        PointX: {type: :float, value: -0.0991}
+        PointY: {type: :float, value: -8.418}
         PointZ: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 14.0115}
-        PointY: {type: :float, value: -0.859}
-        PointZ: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 13.994}
-        PointY: {type: :float, value: -0.0247}
-        PointZ: {type: :float, value: 0.025}
-    HighlightHeight: {type: :float, value: 0.0}
-    KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: wp_drsued04_drsued03}
-    LinkedToFlags: {type: :byte, value: 2}
-    LoadScreenID: {type: :word, value: 0}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 14760
-      value: 
-        0: drsued03_drsued04
-    OnClick: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    PortraitId: {type: :word, value: 0}
-    ScriptHeartbeat: {type: :resref, value: ""}
-    ScriptOnEnter: {type: :resref, value: ""}
-    ScriptOnExit: {type: :resref, value: ""}
-    ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: drsued03_drsued04}
-    TemplateResRef: {type: :resref, value: newtransition}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :int, value: 1}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 42.9615}
-    YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 0.8944}
-    ZOrientation: {type: :float, value: 0.0}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    AutoRemoveKey: {type: :byte, value: 0}
-    Cursor: {type: :byte, value: 1}
-    DisarmDC: {type: :byte, value: 0}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
@@ -378,22 +321,12 @@ TriggerList:
         PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.115}
-        PointY: {type: :float, value: -6.1764}
-        PointZ: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 1.9916}
-        PointY: {type: :float, value: -6.1945}
-        PointZ: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 3
-        PointX: {type: :float, value: 1.9522}
-        PointY: {type: :float, value: -0.0029}
+        PointX: {type: :float, value: -2.0629}
+        PointY: {type: :float, value: -0.0824}
         PointZ: {type: :float, value: 0.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: WP_dr_icespear01_2_dr_bridge}
+    LinkedTo: {type: :cexostr, value: WP_dr_bridge_2_dr_icespear01}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -409,7 +342,7 @@ TriggerList:
     ScriptOnEnter: {type: :resref, value: ""}
     ScriptOnExit: {type: :resref, value: ""}
     ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: dr_bridge_2_dr_icespear01}
+    Tag: {type: :cexostr, value: dr_icespear01_2_dr_bridge}
     TemplateResRef: {type: :resref, value: newtransition}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -419,9 +352,9 @@ TriggerList:
     TrapType: {type: :byte, value: 0}
     Type: {type: :int, value: 1}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 0.1011}
+    XPosition: {type: :float, value: 99.6868}
     YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 31.5222}
+    YPosition: {type: :float, value: 31.6173}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
 WaypointList: 
@@ -438,46 +371,19 @@ WaypointList:
     LinkedTo: {type: :cexostr, value: ""}
     LocalizedName: 
       type: :cexolocstr
-      str_ref: 14817
-      value: 
-        0: wp_drsued03_drsued02
+      value: {}
+
     MapNote: 
       type: :cexolocstr
       value: {}
 
-    MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_drsued03_drsued02}
-    TemplateResRef: {type: :resref, value: nw_waypoint001}
-    XOrientation: {type: :float, value: 0.0245}
-    XPosition: {type: :float, value: 49.9328}
-    YOrientation: {type: :float, value: -0.9997}
-    YPosition: {type: :float, value: 99.2229}
-    ZPosition: {type: :float, value: -0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 1}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 14817
-      value: 
-        0: wp_drsued03_drsued04
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_drsued03_drsued04}
-    TemplateResRef: {type: :resref, value: nw_waypoint001}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 49.986}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 0.5343}
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_dr_icespear01_2_dr_bridge}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -1.0}
+    XPosition: {type: :float, value: 98.6493}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 27.4083}
     ZPosition: {type: :float, value: -0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
@@ -497,10 +403,10 @@ WaypointList:
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_dr_bridge_2_dr_icespear01}
+    Tag: {type: :cexostr, value: WP_dr_icespear01_2_wildnis_schlucht}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: 1.0}
-    XPosition: {type: :float, value: 1.0969}
+    XPosition: {type: :float, value: 1.4756}
     YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 28.425}
-    ZPosition: {type: :float, value: 0.025}
+    YPosition: {type: :float, value: 71.6272}
+    ZPosition: {type: :float, value: -0.0}
