--- a/mod/area/wildnis_schlucht.git.yml
+++ b/mod/area/wildnis_schlucht.git.yml
@@ -20,8 +20,69 @@ Creature List:
 
 Door List: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 8
+    AnimationState: {type: :byte, value: 1}
+    Appearance: {type: :dword, value: 65}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -1.5708}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 80}
+    Description: 
+      type: :cexolocstr
+      value: {}
 
+    DisarmDC: {type: :byte, value: 15}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 16}
+    GenericType_New: {type: :dword, value: 0}
+    HP: {type: :short, value: 80}
+    Hardness: {type: :byte, value: 5}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: WP_dr_icespear01_2_wildnis_schlu}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 5349
+      value: {}
+
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: door_click}
+    OnClosed: {type: :resref, value: door_closed}
+    OnDamaged: {type: :resref, value: door_damaged}
+    OnDeath: {type: :resref, value: door_death}
+    OnDisarm: {type: :resref, value: door_disarm}
+    OnFailToOpen: {type: :resref, value: door_failtoopen}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: door_lock}
+    OnMeleeAttacked: {type: :resref, value: door_attacked}
+    OnOpen: {type: :resref, value: door_open}
+    OnSpellCastAt: {type: :resref, value: door_spellcast}
+    OnTrapTriggered: {type: :resref, value: door_traptrig}
+    OnUnlock: {type: :resref, value: door_unlock}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 18}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 0}
+    Ref: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: wildnis_schlucht_2_dr_icespear01}
+    TemplateResRef: {type: :resref, value: nw_door_ttr_29}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 87.7}
+    Y: {type: :float, value: 47.6}
+    Z: {type: :float, value: 0.0}
 Encounter List: 
   type: :list
   value: []
@@ -758,24 +819,24 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -37.1875991821289}
-        PointY: {type: :float, value: 3.13610005378723}
-        PointZ: {type: :float, value: 15.0249996185303}
+        PointX: {type: :float, value: -37.1876}
+        PointY: {type: :float, value: 3.1361}
+        PointZ: {type: :float, value: 15.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -36.7486000061035}
-        PointY: {type: :float, value: 0.173199996352196}
-        PointZ: {type: :float, value: 15.0249996185303}
+        PointX: {type: :float, value: -36.7486}
+        PointY: {type: :float, value: 0.1732}
+        PointZ: {type: :float, value: 15.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 15.0249996185303}
+        PointZ: {type: :float, value: 15.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0052000000141561}
-        PointY: {type: :float, value: 3.34170007705688}
-        PointZ: {type: :float, value: 15.0249996185303}
+        PointX: {type: :float, value: -0.0052}
+        PointY: {type: :float, value: 3.3417}
+        PointZ: {type: :float, value: 15.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_gabel_sued3_2_schlucht}
@@ -822,22 +883,22 @@ TriggerList:
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 15.0249996185303}
+        PointZ: {type: :float, value: 15.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 3.4342999458313}
-        PointY: {type: :float, value: 0.0355000011622906}
-        PointZ: {type: :float, value: 15.0249996185303}
+        PointX: {type: :float, value: 3.4343}
+        PointY: {type: :float, value: 0.0355}
+        PointZ: {type: :float, value: 15.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 3.6091001033783}
-        PointY: {type: :float, value: 17.6177005767822}
-        PointZ: {type: :float, value: 15.0249996185303}
+        PointX: {type: :float, value: 3.6091}
+        PointY: {type: :float, value: 17.6177}
+        PointZ: {type: :float, value: 15.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.453700006008148}
-        PointY: {type: :float, value: 17.7689990997314}
-        PointZ: {type: :float, value: 15.0249996185303}
+        PointX: {type: :float, value: 0.4537}
+        PointY: {type: :float, value: 17.769}
+        PointZ: {type: :float, value: 15.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_mondsee2_2_schlucht}
