Gabel Sued/Schlucht: Icespear details, forest AT to sued3

--- a/mod/area/gabel_sued3.git.yml
+++ b/mod/area/gabel_sued3.git.yml
@@ -20,8 +20,69 @@ Creature List:
 
 Door List: 
   type: :list
-  value: []
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 8
+    AnimationState: {type: :byte, value: 1}
+    Appearance: {type: :dword, value: 65}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: 3.1416}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 80}
+    Description: 
+      type: :cexolocstr
+      value: {}
 
+    DisarmDC: {type: :byte, value: 15}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 16}
+    GenericType_New: {type: :dword, value: 0}
+    HP: {type: :short, value: 80}
+    Hardness: {type: :byte, value: 5}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LinkedToFlags: {type: :byte, value: 0}
+    LoadScreenID: {type: :word, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 5349
+      value: {}
+
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: door_click}
+    OnClosed: {type: :resref, value: door_closed}
+    OnDamaged: {type: :resref, value: door_damaged}
+    OnDeath: {type: :resref, value: door_death}
+    OnDisarm: {type: :resref, value: door_disarm}
+    OnFailToOpen: {type: :resref, value: door_failtoopen}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: door_lock}
+    OnMeleeAttacked: {type: :resref, value: door_attacked}
+    OnOpen: {type: :resref, value: door_open}
+    OnSpellCastAt: {type: :resref, value: door_spellcast}
+    OnTrapTriggered: {type: :resref, value: door_traptrig}
+    OnUnlock: {type: :resref, value: door_unlock}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 18}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 0}
+    Ref: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: gabel_sued3_2_wildnis_schlucht}
+    TemplateResRef: {type: :resref, value: nw_door_ttr_29}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 15.0}
+    Y: {type: :float, value: 2.22}
+    Z: {type: :float, value: 0.0}
 Encounter List: 
   type: :list
   value: []
@@ -58,22 +119,22 @@ TriggerList:
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: -1.90269994735718}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointY: {type: :float, value: -1.9027}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 29.5657997131348}
-        PointY: {type: :float, value: -1.90269994735718}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 29.5658}
+        PointY: {type: :float, value: -1.9027}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 29.5732002258301}
-        PointY: {type: :float, value: -0.141399994492531}
-        PointZ: {type: :float, value: -0.00039999998989515}
+        PointX: {type: :float, value: 29.5732}
+        PointY: {type: :float, value: -0.1414}
+        PointZ: {type: :float, value: -0.0004}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_suedhof2_2_gabel_s3_2}
@@ -120,22 +181,22 @@ TriggerList:
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 4.02500009536743}
+        PointZ: {type: :float, value: 4.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
-        PointY: {type: :float, value: -2.17109990119934}
-        PointZ: {type: :float, value: 4.02500009536743}
+        PointY: {type: :float, value: -2.1711}
+        PointZ: {type: :float, value: 4.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 51.0214996337891}
-        PointY: {type: :float, value: -2.17109990119934}
-        PointZ: {type: :float, value: 4.02500009536743}
+        PointX: {type: :float, value: 51.0215}
+        PointY: {type: :float, value: -2.1711}
+        PointZ: {type: :float, value: 4.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 51.0214996337891}
-        PointY: {type: :float, value: -0.361900001764297}
-        PointZ: {type: :float, value: 4.02500009536743}
+        PointX: {type: :float, value: 51.0215}
+        PointY: {type: :float, value: -0.3619}
+        PointZ: {type: :float, value: 4.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_suedhof2_2_gabel_s3_1}
@@ -182,22 +243,22 @@ TriggerList:
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 2.10310006141663}
-        PointY: {type: :float, value: 0.0653000026941299}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 2.1031}
+        PointY: {type: :float, value: 0.0653}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 2.13359999656677}
-        PointY: {type: :float, value: 28.6406993865967}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 2.1336}
+        PointY: {type: :float, value: 28.6407}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.148200005292892}
-        PointY: {type: :float, value: 28.618200302124}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 0.1482}
+        PointY: {type: :float, value: 28.6182}
+        PointZ: {type: :float, value: 0.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_mondsee1_2_gabel_sued3_2}
@@ -244,22 +305,22 @@ TriggerList:
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.1891999989748}
+        PointZ: {type: :float, value: 0.1892}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 2.10310006141663}
-        PointY: {type: :float, value: 0.0653000026941299}
-        PointZ: {type: :float, value: 0.0390000008046627}
+        PointX: {type: :float, value: 2.1031}
+        PointY: {type: :float, value: 0.0653}
+        PointZ: {type: :float, value: 0.039}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 2.13359999656677}
-        PointY: {type: :float, value: 28.6406993865967}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 2.1336}
+        PointY: {type: :float, value: 28.6407}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.148200005292892}
-        PointY: {type: :float, value: 28.618200302124}
-        PointZ: {type: :float, value: 0.0221999995410442}
+        PointX: {type: :float, value: 0.1482}
+        PointY: {type: :float, value: 28.6182}
+        PointZ: {type: :float, value: 0.0222}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_mondsee1_2_gabel_sued3_1}
@@ -304,24 +365,24 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -54.1945991516113}
-        PointY: {type: :float, value: -2.58899998664856}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -54.1946}
+        PointY: {type: :float, value: -2.589}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.133499994874001}
-        PointY: {type: :float, value: -2.58899998664856}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -0.1335}
+        PointY: {type: :float, value: -2.589}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -54.1785011291504}
-        PointY: {type: :float, value: -0.491600006818771}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -54.1785}
+        PointY: {type: :float, value: -0.4916}
+        PointZ: {type: :float, value: 0.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_schlucht_2_gabel_sued3}
