Nesserberge: attach to Wildnis Schlucht

--- a/mod/area/nessergb_n20.git.yml
+++ b/mod/area/nessergb_n20.git.yml
@@ -863,29 +863,29 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -4.76837158203125e-07}
-        PointY: {type: :float, value: -6.36354827880859}
-        PointZ: {type: :float, value: 20.0249996185303}
+        PointX: {type: :float, value: -0.0}
+        PointY: {type: :float, value: -6.3635}
+        PointZ: {type: :float, value: 20.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 1.94649767875671}
-        PointY: {type: :float, value: -6.36354827880859}
-        PointZ: {type: :float, value: 20.0249996185303}
+        PointX: {type: :float, value: 1.9465}
+        PointY: {type: :float, value: -6.3635}
+        PointZ: {type: :float, value: 20.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 1.79676675796509}
-        PointY: {type: :float, value: 3.814697265625e-06}
-        PointZ: {type: :float, value: 20.0249996185303}
+        PointX: {type: :float, value: 1.7968}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 20.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.0748653411865234}
-        PointY: {type: :float, value: 0.149730682373047}
-        PointZ: {type: :float, value: 20.0249996185303}
+        PointX: {type: :float, value: 0.0749}
+        PointY: {type: :float, value: 0.1497}
+        PointZ: {type: :float, value: 20.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 20.0249996185303}
+        PointZ: {type: :float, value: 20.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_at_nessergb_n10_nessergb_n20}
@@ -930,29 +930,29 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0229873657226562}
-        PointY: {type: :float, value: 1.92136216163635}
-        PointZ: {type: :float, value: 30.0249996185303}
+        PointX: {type: :float, value: -0.023}
+        PointY: {type: :float, value: 1.9214}
+        PointZ: {type: :float, value: 30.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 30.0249996185303}
+        PointZ: {type: :float, value: 30.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 0.0582046508789062}
-        PointY: {type: :float, value: -0.128098487854004}
-        PointZ: {type: :float, value: 30.0249996185303}
+        PointX: {type: :float, value: 0.0582}
+        PointY: {type: :float, value: -0.1281}
+        PointZ: {type: :float, value: 30.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 7.97420120239258}
-        PointY: {type: :float, value: -0.101397514343262}
-        PointZ: {type: :float, value: 30.0249996185303}
+        PointX: {type: :float, value: 7.9742}
+        PointY: {type: :float, value: -0.1014}
+        PointZ: {type: :float, value: 30.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 8.0304069519043}
-        PointY: {type: :float, value: 1.91776609420776}
-        PointZ: {type: :float, value: 30.0249996185303}
+        PointX: {type: :float, value: 8.0304}
+        PointY: {type: :float, value: 1.9178}
+        PointZ: {type: :float, value: 30.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: ""}
@@ -984,6 +984,68 @@ TriggerList:
     XPosition: {type: :float, value: 56.0736}
     YOrientation: {type: :float, value: 0.0}
     YPosition: {type: :float, value: 0.2291}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -8.5816}
+        PointY: {type: :float, value: 0.1316}
+        PointZ: {type: :float, value: 25.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -8.5215}
+        PointY: {type: :float, value: -4.9989}
+        PointZ: {type: :float, value: 25.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.4037}
+        PointY: {type: :float, value: -4.8462}
+        PointZ: {type: :float, value: 25.0226}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 25.0226}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: WP_wildnis_schlucht_2_nesser_n20}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: {}
+
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: nesser_n20_2_wildnis_schlucht}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 84.3782}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 119.759}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
 WaypointList: 
@@ -1041,3 +1103,28 @@ WaypointList:
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 0.8946}
     ZPosition: {type: :float, value: 30.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_nesser_n20_2_wildnis_schlucht}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 80.2892}
+    YOrientation: {type: :float, value: 1.0}
+    YPosition: {type: :float, value: 117.3253}
+    ZPosition: {type: :float, value: 25.0238}
