Gabel Steinbruch: connect to dr_ferry01
closes #4

--- a/mod/area/dr_ferry01.git.yml
+++ b/mod/area/dr_ferry01.git.yml
@@ -376,29 +376,29 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.0398001670837402}
-        PointY: {type: :float, value: 4.04776763916016}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: -0.0398}
+        PointY: {type: :float, value: 4.0478}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.00192975997924805}
-        PointY: {type: :float, value: 0.0368309020996094}
-        PointZ: {type: :float, value: 0.0250000599771738}
+        PointX: {type: :float, value: -0.0019}
+        PointY: {type: :float, value: 0.0368}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 1.29346942901611}
-        PointY: {type: :float, value: -0.0183753967285156}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 1.2935}
+        PointY: {type: :float, value: -0.0184}
+        PointZ: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 1.30019927024841}
-        PointY: {type: :float, value: 4.0810661315918}
-        PointZ: {type: :float, value: 0.025000000372529}
+        PointX: {type: :float, value: 1.3002}
+        PointY: {type: :float, value: 4.0811}
+        PointZ: {type: :float, value: 0.025}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: wp_drsued02_drferry01}
@@ -432,6 +432,68 @@ TriggerList:
     YPosition: {type: :float, value: 52.9594}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0188}
+        PointY: {type: :float, value: -2.3053}
+        PointZ: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 4.0237}
+        PointY: {type: :float, value: -2.1736}
+        PointZ: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 4.107}
+        PointY: {type: :float, value: 0.0427}
+        PointZ: {type: :float, value: 0.025}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: WP_steinbruch3_2_dr_ferry01}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: {}
+
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: dr_ferry01_2_steinbruch3}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 62.694}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 69.714}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
 WaypointList: 
   type: :list
   value: 
@@ -461,3 +523,28 @@ WaypointList:
     YOrientation: {type: :float, value: 0.0}
     YPosition: {type: :float, value: 54.84}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_dr_ferry01_2_steinbruch3}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -0.0}
+    XPosition: {type: :float, value: 64.7475}
+    YOrientation: {type: :float, value: -1.0}
+    YPosition: {type: :float, value: 68.5827}
+    ZPosition: {type: :float, value: 0.025}
