--- a/mod/area/dr_ferry01.are.yml
+++ b/mod/area/dr_ferry01.are.yml
@@ -122,6 +122,18 @@ Tile_List:
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 11}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 1}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 0}
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
@@ -191,6 +203,18 @@ Tile_List:
     Tile_Orientation: {type: :int, value: 1}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 110}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 1}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
@@ -263,6 +287,18 @@ Tile_List:
     Tile_Orientation: {type: :int, value: 0}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 149}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
@@ -338,6 +374,18 @@ Tile_List:
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 33}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 0}
     Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
@@ -407,6 +455,18 @@ Tile_List:
     Tile_Orientation: {type: :int, value: 3}
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 122}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
@@ -485,6 +545,18 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 123}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 5}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
@@ -551,7 +623,19 @@ Tile_List:
     Tile_Orientation: {type: :int, value: 0}
     Tile_SrcLight1: {type: :byte, value: 0}
     Tile_SrcLight2: {type: :byte, value: 0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 126}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
 Tileset: {type: :resref, value: tcdh0}
 Version: {type: :dword, value: 0}
-Width: {type: :int, value: 6}
+Width: {type: :int, value: 7}
 WindPower: {type: :int, value: 0}
