--- a/mod/area/steinbruch003.git.yml
+++ b/mod/area/steinbruch003.git.yml
@@ -54,7 +54,7 @@ SoundList:
     Looping: {type: :byte, value: 0}
     MaxDistance: {type: :float, value: 10.0}
     MinDistance: {type: :float, value: 1.0}
-    PitchVariation: {type: :float, value: 0.200000002980232}
+    PitchVariation: {type: :float, value: 0.20000000298023224}
     Positional: {type: :byte, value: 0}
     Priority: {type: :byte, value: 19}
     Random: {type: :byte, value: 1}
@@ -143,9 +143,45 @@ SoundList:
     Times: {type: :byte, value: 3}
     Volume: {type: :byte, value: 63}
     VolumeVrtn: {type: :byte, value: 0}
-    XPosition: {type: :float, value: 60.391}
-    YPosition: {type: :float, value: 15.1482}
+    XPosition: {type: :float, value: 60.3866}
+    YPosition: {type: :float, value: 15.1904}
     ZPosition: {type: :float, value: 3.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 6
+    Active: {type: :byte, value: 1}
+    Continuous: {type: :byte, value: 0}
+    Elevation: {type: :float, value: 3.0}
+    GeneratedType: {type: :dword, value: 0}
+    Hours: {type: :dword, value: 0}
+    Interval: {type: :dword, value: 0}
+    IntervalVrtn: {type: :dword, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 68016
+      value: {}
+
+    Looping: {type: :byte, value: 1}
+    MaxDistance: {type: :float, value: 8.0}
+    MinDistance: {type: :float, value: 0.800000011920929}
+    PitchVariation: {type: :float, value: 0.0}
+    Positional: {type: :byte, value: 1}
+    Priority: {type: :byte, value: 3}
+    Random: {type: :byte, value: 0}
+    RandomPosition: {type: :byte, value: 0}
+    RandomRangeX: {type: :float, value: 0.0}
+    RandomRangeY: {type: :float, value: 0.0}
+    Sounds: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Sound: {type: :resref, value: al_na_wtrflvoid2}}
+    Tag: {type: :cexostr, value: WaterfallOverEdgeMedium}
+    TemplateResRef: {type: :resref, value: waterfallover001}
+    Times: {type: :byte, value: 3}
+    Volume: {type: :byte, value: 63}
+    VolumeVrtn: {type: :byte, value: 0}
+    XPosition: {type: :float, value: 94.4373}
+    YPosition: {type: :float, value: 26.0582}
+    ZPosition: {type: :float, value: 2.0}
 StoreList: 
   type: :list
   value: []
@@ -164,24 +200,24 @@ TriggerList:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: -0.133248329162598}
-        PointY: {type: :float, value: 1.77882766723633}
-        PointZ: {type: :float, value: 1.52499997615814}
+        PointX: {type: :float, value: -0.1332}
+        PointY: {type: :float, value: 1.7788}
+        PointZ: {type: :float, value: 1.525}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 1.52499997615814}
+        PointZ: {type: :float, value: 1.525}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 1.41559839248657}
-        PointY: {type: :float, value: -0.0375156402587891}
-        PointZ: {type: :float, value: 1.52499997615814}
+        PointX: {type: :float, value: 1.4156}
+        PointY: {type: :float, value: -0.0375}
+        PointZ: {type: :float, value: 1.525}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 3
-        PointX: {type: :float, value: 1.43315553665161}
-        PointY: {type: :float, value: 1.82673454284668}
-        PointZ: {type: :float, value: 1.52499997615814}
+        PointX: {type: :float, value: 1.4332}
+        PointY: {type: :float, value: 1.8267}
+        PointZ: {type: :float, value: 1.525}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
     LinkedTo: {type: :cexostr, value: WP_steinbruch2_2_steinbruch3}
@@ -215,6 +251,68 @@ TriggerList:
     YPosition: {type: :float, value: 24.0953}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -2.0102}
+        PointY: {type: :float, value: -10.4309}
+        PointZ: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0585}
+        PointY: {type: :float, value: -10.4495}
+        PointZ: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 0.275}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: -1.8288}
+        PointY: {type: :float, value: 0.0162}
+        PointZ: {type: :float, value: 0.275}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: WP_dr_ferry01_2_steinbruch3}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: {}
+
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: steinbruch3_2_dr_ferry01}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 99.6183}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 16.8806}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
 WaypointList: 
   type: :list
   value: 
@@ -243,3 +341,28 @@ WaypointList:
     YOrientation: {type: :float, value: 0.0}
     YPosition: {type: :float, value: 24.9649}
     ZPosition: {type: :float, value: 1.4045}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_steinbruch3_2_dr_ferry01}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -1.0}
+    XPosition: {type: :float, value: 97.5111}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 11.4657}
+    ZPosition: {type: :float, value: -0.0}
